2010-08-24  Roland McGrath  <roland@redhat.com>

	* configure.in: Remove config-name.h generation.
	* configure: Regenerated.
	* config-name.in: File removed.
	* scripts/config-uname.sh: New file.
	* posix/Makefile (uname.c): Depend on $(objdir)config-name.h.
	($(objdir)config-name.h): New target.

	* sunrpc/rpc_parse.h: Avoid nested comment.

2010-08-24  Richard Henderson  <rth@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add varshift.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Likewise.
	* sysdeps/x86_64/multiarch/strcspn-c.c: Include "varshift.h".
	Replace _mm_srli_si128 with __m128i_shift_right.  Replace
	_mm_alignr_epi8 with _mm_loadu_si128.
	* sysdeps/x86_64/multiarch/strspn-c.c: Likewise.
	* sysdeps/x86_64/multiarch/strstr.c: Include "varshift.h".
	(__m128i_shift_right): Removed.
	* sysdeps/i386/i686/multiarch/varshift.h: New file.
	* sysdeps/i386/i686/multiarch/varshift.S: New file.
	* sysdeps/x86_64/multiarch/varshift.h: New file.
	* sysdeps/x86_64/multiarch/varshift.S: New file.

2010-08-21  Mike Frysinger  <vapier@gentoo.org>

	* configure.in: Move assembler checks to before sysdep dir checking.

2010-08-20  Petr Baudis  <pasky@suse.cz>

	* LICENSES: Sync the sunrpc license.

2010-08-19  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/auth_des.c: Update copyright notice once again.
	* sunrpc/auth_none.c: Likewise.
	* sunrpc/auth_unix.c: Likewise.
	* sunrpc/authdes_prot.c: Likewise.
	* sunrpc/authuxprot.c: Likewise.
	* sunrpc/bindrsvprt.c: Likewise.
	* sunrpc/clnt_gen.c: Likewise.
	* sunrpc/clnt_perr.c: Likewise.
	* sunrpc/clnt_raw.c: Likewise.
	* sunrpc/clnt_simp.c: Likewise.
	* sunrpc/clnt_tcp.c: Likewise.
	* sunrpc/clnt_udp.c: Likewise.
	* sunrpc/clnt_unix.c: Likewise.
	* sunrpc/des_crypt.c: Likewise.
	* sunrpc/des_soft.c: Likewise.
	* sunrpc/get_myaddr.c: Likewise.
	* sunrpc/getrpcport.c: Likewise.
	* sunrpc/key_call.c: Likewise.